syntax = "proto3";
option csharp_namespace = "FileService.Contracts";
import "google/protobuf/timestamp.proto";
import "Metadata.proto";

// Models
message File {
    string FileName = 1;
    FileData Data = 2;
    google.protobuf.Timestamp CreatedTime = 3;
}

message FileData {
    bytes Data = 1;
}

// Requests
message WriteFileRequest {
    string FileName = 1;
    FileData Chunk = 2;
}

message ReadFileRequest {
    string FileName = 1;
}

// Services
service FileService {
    rpc GetFile (ReadFileRequest) returns (File) {
    }
    rpc StreamFile (ReadFileRequest) returns (stream FileData) {
    }
    rpc WriteFile (File) returns (FileMetadata) {
    }
    rpc WriteFileStream (stream WriteFileRequest) returns (FileMetadata) {
    }
}


